kubernetes/addons/networking/traefik-external/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external-dashboard
  namespace: traefik-external
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-external-networking
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: traefik
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-external-networking
