kubernetes/addons/networking/traefik-external/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javiersant.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.javiersant.com`)
      kind: Rule
      middlewares:
        # - name: default-headers
        - name: oauth2-proxy
          namespace: iam
        # - name: oauth-errors
        #   namespace: iam
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-javstudio-org-tls
